# roarm_ws_em0

./: .gitignore  README.md  README_EN.md  README_ZH.md  build_common.sh  build_first.sh  build_roarm_web_app.sh  requirements.txt
src/roarm_cpp/: README.md  pub_feedback.py  pub_fk.cpp  pub_ik.cpp
src/roarm_else/launch_api/: README.md  package.xml  setup.cfg  setup.py
src/roarm_else/launch_api/examples/: turtlesim.py
src/roarm_else/launch_api/launch_api/: __init__.py  process_proxy.py  service.py
src/roarm_else/launch_api/launch_api/actions/: process.py  process_manager.py
src/roarm_else/launch_api/launch_api/events/: __init__.py  execution_process.py
src/roarm_else/launch_api/launch_api/utilities/: __init__.py  logger.py  node_wrapper.py
src/roarm_else/ros2web-ros2/examples/ros2web_example_py/ros2web_example_py/: api.py
src/roarm_else/ros2web_app/: README.md  requirements.txt
src/roarm_else/ros2web_app/examples/: README.md
src/roarm_else/ros2web_app/examples/ros2web_widgets/: package.xml  setup.cfg  setup.py
src/roarm_else/ros2web_app/examples/ros2web_widgets/ros2web_widgets/: widgets.py
src/roarm_else/ros2web_app/examples/ros2web_widgets/ros2web_widgets/data/: config.yml
src/roarm_else/ros2web_app/ros2web_app/: debug.py  package.xml  setup.cfg  setup.py
src/roarm_else/ros2web_app/ros2web_app/ros2web_app/: app.py
src/roarm_else/ros2web_app/ros2web_app/ros2web_app/api/: __init__.py  app_base.py  state.py
src/roarm_else/ros2web_app/ros2web_app/ros2web_app/boilerplate/: __init__.py  template.py
src/roarm_else/ros2web_app/ros2web_app/ros2web_app/data/: config.yml
src/roarm_else/ros2web_app/ros2web_app/ros2web_app/data/public/: index.html
src/roarm_else/ros2web_app/ros2web_app/ros2web_app/handler/: app.py  web_rtc.py
src/roarm_else/ros2web_app/ros2web_app/ros2web_app/handler/track/: image.py
src/roarm_else/ros2web_app/ros2web_app/ros2web_app/utilities/: __init__.py  ros_node.py  yaml.py
src/roarm_else/ros2web_app/ros2web_app/ros2web_app/utilities/ros/: __init__.py  param.py  service.py
src/roarm_else/ros2web_app/ros2web_app/ros2web_app/verb/: create.py
src/roarm_else/ros2web_app/web_app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/roarm_else/ros2web_app/web_app/src/: main.css  main.tsx
src/roarm_else/ros2web_app/web_app/src/components/: Button.tsx  Widget.tsx  WidgetBox.tsx  utils.tsx
src/roarm_else/ros2web_app/web_app/src/components/Grid/: grid.scss  index.tsx  react-grid-layout.css  resizable.css  type.ts
src/roarm_else/ros2web_app/web_app/src/hooks/: index.ts  use-global-state.ts  use-local-storage.ts
src/roarm_else/ros2web_app/web_app/src/routes/: index.tsx
src/roarm_else/ros2web_app/web_app/src/styles/: theme.ts
src/roarm_else/ros2web_app/web_app/src/utils/: extract.ts  index.ts  layout.ts  replace.ts
src/roarm_main/: update_ikfast_plugin.sh
src/roarm_main/moveit_servo/: CMakeLists.txt  package.xml
src/roarm_main/moveit_servo/config/: demo.rviz  roarm_simulated_config.yaml  servo_control.rviz
src/roarm_main/moveit_servo/include/moveit_servo/: servo_parameters.h
src/roarm_main/moveit_servo/launch/: demo.launch.py  servo_control.launch.py
src/roarm_main/moveit_servo/src/: servo_calcs.cpp  servo_parameters.cpp
src/roarm_main/moveit_servo/src/teleop_demo/: joystick_servo_example (copy).cpp  joystick_servo_example.cpp
src/roarm_main/moveit_servo/test/: servo_launch_test_common.hpp
src/roarm_main/roarm_description/: CMakeLists.txt  package.xml  setup.py
src/roarm_main/roarm_description/config/: joint_names_roarm.yaml  mounted_roarm_description.rviz  roarm_description.rviz
src/roarm_main/roarm_description/launch/: display.launch.py  gazebo.launch.py  mounted.display.launch.py
src/roarm_main/roarm_description/meshes/: base_link.STL  gripper_link.STL  link1.STL  link2.STL  link3.STL  link3_0.STL  link3_180.STL  link3_270.STL  link3_90.STL  link4.STL
src/roarm_main/roarm_description/urdf/: mybot1.xacro  roarm_description.csv  roarm_description.urdf  roarm_description.urdf.xacro  roarm_description_web_app.urdf  roarm_generated.urdf  roarm_urdf_builder.xacro
src/roarm_main/roarm_driver/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/roarm_main/roarm_driver/launch/: roarm.launch.py
src/roarm_main/roarm_driver/roarm_driver/: roarm_driver.py
src/roarm_main/roarm_moveit/: .setup_assistant  CMakeLists.txt  CMakeLists.txt.txt  package.xml  package.xml.txt
src/roarm_main/roarm_moveit/config/: initial_positions.yaml  interact.rviz  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  roarm_description.ros2_control.xacro  roarm_description.srdf  roarm_description.urdf.xacro  ros2_controllers.yaml
src/roarm_main/roarm_moveit/launch/: command_control_moveit_rviz.launch.py  demo.launch.py  interact.launch.py  interact_moveit_rviz.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/roarm_main/roarm_moveit/srv/: GetPoseCmd.srv  MoveCircleCmd.srv  MovePointCmd.srv
src/roarm_main/roarm_moveit_cmd/: .setup_assistant  CMakeLists.txt  package.xml
src/roarm_main/roarm_moveit_cmd/config/: command_control.rviz
src/roarm_main/roarm_moveit_cmd/include/roarm_moveit_cmd/: ik.h
src/roarm_main/roarm_moveit_cmd/launch/: command_control.launch.py
src/roarm_main/roarm_moveit_cmd/src/: getposecmd.cpp  getposecmd_moveit2.cpp  getposecmd_tf2.cpp  keyboardcontrol.cpp  movecirclecmd.cpp  movepointcmd.cpp  setgrippercmd.cpp  webappcontrol.cpp
src/roarm_main/roarm_moveit_ikfast_plugins/: CMakeLists.txt  package.xml  roarm_description_hand_moveit_ikfast_plugin_description.xml  update_ikfast_plugin.sh
src/roarm_main/roarm_moveit_ikfast_plugins/src/: ikfast.h  roarm_description_hand_ikfast_moveit_plugin.cpp  roarm_description_hand_ikfast_solver.cpp
src/roarm_main/roarm_web_app/: package.xml  setup.cfg  setup.py
src/roarm_main/roarm_web_app/roarm_web_app/: roarm_web_app.py
src/roarm_main/roarm_web_app/roarm_web_app/data/: config.yml
(+19 files in other folders)
