<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roarm_web_app</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dudu@todo.todo">dudu</maintainer>
  <license>TODO: License declaration</license>
  <depend>ros2web</depend>
  <depend>ros2web_app</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
