<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2web_widgets</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="tygoto@todo.todo">tygoto</maintainer>
  <license>TODO: License declaration</license>
  <depend>ros2web</depend>
  <depend>ros2web_app</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
